<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newUser"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:padding="5dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="10dp"
        android:singleLine="true">
        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textAppearance="?android:attr/textAppearanceSmall"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/feet"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:background="@drawable/edittextshape"
        android:hint="@string/feet"
        android:textAlignment="center"
        android:inputType="number"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
    </EditText>

    <EditText
        android:id="@+id/inches"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:background="@drawable/edittextshape"
        android:hint="@string/inches"
        android:textAlignment="center"
        android:inputType="number"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

    </EditText>

    <TextView
        android:id="@+id/weightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textAppearance="?android:attr/textAppearanceSmall"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:background="@drawable/edittextshape"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
    </EditText>

    <TextView
        android:id="@+id/ageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textAppearance="?android:attr/textAppearanceSmall"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:background="@drawable/edittextshape"
        android:textAlignment="center"
        android:inputType="number"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
    </EditText>
</LinearLayout>